--- a/package.json
+++ b/package.json
@@ -31,5 +31,24 @@
       "data-cover-never": "node_modules"
     }
   },
-  "readmeFilename": "README.md"
+  "readmeFilename": "README.md",
+  "devDependencies": {
+    "jest": "^24.8.0",
+    "mockserver-node": "^5.6.0"
+  },
+  "scripts": {
+    "test": "jest",
+    "coverage": "nyc jest report --reporter=html"
+
+  },
+  "jest": {
+    "coverageReporters":  ["html"],
+    "coverageDirectory": "./",
+    "collectCoverage": true,
+    "collectCoverageFrom": [
+      "lib/*.{js}",
+      "!**/node_modules/**",
+      "!**/coverage/**"
+    ]
+  }
 }
